# eth-bridge-sol

./: Anchor.toml
Bridge/: Cargo.toml
Bridge/src/: lib.rs
EXOToken/: Cargo.toml
EXOToken/src/: lib.rs  state.rs
GCREDToken/src/: lib.rs
backend/: address.json  index.js
backend/abi/: bridge.json
programs/Bridge/src/: lib.rs
programs/EXOToken/src/: lib.rs
programs/GCREDToken/: Cargo.toml
programs/GCREDToken/src/: lib.rs  state.rs
programs/StakingReward/: Cargo.toml
programs/StakingReward/src/: lib.rs  state.rs
tests/: StakingReward.js
